# fantasybackendnew

./: .env-docker  .env.example  .gitignore  ADMIN_AJAX_SEARCH.md  AUTH_DEBUGGING.md  BACKEND_CHANGES_PAID_TRANSFERS.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  FIX_APSCHEDULER_ERROR.md  IMPORT_GUIDE.md  INSTALL_UPDATES.md  PENALTY_POINTS_IMPLEMENTATION.md  PLAYER_POINTS_UPDATE.md  README_TOUR_SNAPSHOTS.md  REFACTORING_INVENTORY.md  SCHEDULER_SETUP.md  SQUAD_CREATION_ERROR_FIX.md  SQUAD_CREATION_LOGIC_FIX.md  START_BACKEND.md  SUMMARY_PLAYER_POINTS.md  TOUR_SNAPSHOTS_CHANGELOG.md  TOUR_SNAPSHOTS_LOGIC.md  TOUR_SNAPSHOTS_USAGE.md  UPDATE_POETRY_LOCK.md  WARP.md  celerybeat-schedule  check_bot_token.md  check_positions.py  create_admin.py  docker-compose.yaml  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run-poetry.ps1  test_tour_snapshots.py  Рефакторинг архитектуры Squad и SquadTour - переход к snapshot-модели.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0394b38750b2_1.py  0a0579922281_tours.py  0b87a3ae61a5_добавлены_captain_id_и_vice_captain_id_.py  0be71e2312bf_2.py  0dc035858eb2_football.py  16bf132f1243_custom_league.py  1718e3452c64_4.py  1f58292b6091_matches_duration.py  221cdd4fe0c0_pos_str.py  23c56930392b_players.py  248526e1458e_cl_upd.py  32f78cae40e5_age.py  352def0c02f9_squads3.py  3918540564d1_5.py  3b924f533fe5_matches.py  425df1cf7ea7_1.py  (+51 more)
app/: base_service.py  config.py  database.py  exceptions.py  main.py  middleware.py
nginx/: nginx.conf
templates/: utils.html
(+94 files in other folders)
